# q2-assembly

./: .copier-answers.yml  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  ALIGNMENT_DELETE.qza  ALIGNMENT_DELETE_PAR.qza  Dockerfile  INDEX_DELETE.qza  LICENSE  MANIFEST.in  Makefile  README.md  READS_DELETE.qza  pyproject.toml  requirements.txt  setup.cfg  setup.py  temp-env.yml  versioneer.py
.github/workflows/: changelog.yaml  ci-dev.yaml  ci.yaml  ci.yml  dependecies.yaml  dependent-issues.yaml  docker-push.yaml  docker.yml  upload-coverage.yaml
ci/recipe/: meta.yaml  test_build.sh
conda-recipe/: meta.yaml
environment-files/: q2-assembly-qiime2-metagenome-2024.10.yml  q2-assembly-qiime2-moshpit-2025.10.yml  q2-assembly-qiime2-moshpit-2025.4.yml  q2-assembly-qiime2-moshpit-2026.1.yml  q2-assembly-rachis-moshpit-2026.4.yml
q2_assembly/: __init__.py  _action_params.py  _utils.py  _version.py  citations.bib  plugin_setup.py
q2_assembly/assets/contig_qc/: dashboard.html.j2  (+8 more)
q2_assembly/bowtie2/: __init__.py  bowtie2.py  indexing.py  mapping.py  utils.py
q2_assembly/contig_qc/: __init__.py  qc.py
q2_assembly/filter/: __init__.py  filter.py
q2_assembly/helpers/: __init__.py  helpers.py
q2_assembly/iss/: __init__.py  iss.py
q2_assembly/mason/: __init__.py  mason.py
q2_assembly/megahit/: __init__.py  helpers.py  megahit.py
q2_assembly/quast/: __init__.py  quast.py  report.py  utils.py
q2_assembly/spades/: __init__.py  spades.py
q2_assembly/tests/: test_helpers.py  test_utils.py
q2_plugin_name/: _version.py  plugin_setup.py
(+108 files in other folders)
